kubernetes_files/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: loki
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/location-snippet: |
      location /login {
          satisfy all;

          proxy_set_header Host $http_host;
          proxy_pass http://loki-grafana/login;
      }
spec:
  ingressClassName: nginx
  rules:
    # - host: www.example.com
    - http:
        paths:
          - path: /grafana
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki-grafana
                port:
                  number: 80
