kubernetes_files/ingress/ui-component-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-component-ingress
  namespace: default
  # annotations:
  #   nginx.ingress.kubernetes.io/use-regex: "true"
  #   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    # - host: www.example.com
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ui-component
                port:
                  number: 8080
                  # - path: /grafana
                  #   pathType: Prefix
                  #   backend:
                  #     service:
                  #       # name: nginx-component 
                  #       name: loki-grafana
                  #       port:
                  #         number: 80
# This section is only required if TLS is to be enabled for the Ingress
# tls:
#   - hosts:
#     - www.example.com
#     secretName: example-tls
